Add tests for int versus float coordinate storage